created responsive navbar and hamburger menu

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- LINK CSS  -->
-    <link rel="stylesheet" href="./css/utils.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/gallery.css">
     <link rel="stylesheet" href="./css/lightbox.min.css">
     <link rel="stylesheet" href="./css/testimonials.css">
     <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="./css/hamburger.css">
+    <link rel="stylesheet" href="./css/media-quaries.css">
 
     <!-- font awesome  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -65,7 +66,12 @@
                         <img src="./images/daksh-logo.png" alt="daksh-logo">
                     </div>
                 </a>
-                <ul class="d-flex justify-content-between align-items-centre">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <ul class="d-flex justify-content-between align-items-centre nav-list">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#expertise">Expertise</a></li>
                     <li><a href="#gallery">Gallery</a></li>
@@ -328,23 +334,19 @@
         <div class="yt-playlists">
             <h1>Youtube Video Playlists</h1>
             <div class="playlist">
-                <iframe width="575" height="275"
-                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7ZKO5pLGJ11gvRWwgPKHy3g"
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7ZKO5pLGJ11gvRWwgPKHy3g"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe width="575" height="275"
-                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Zfuf7cDorbDMLDxJfEc6pM"
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Zfuf7cDorbDMLDxJfEc6pM"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe width="575" height="275"
-                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7YhCHy2Lf5rd1m1QjDQ5H5A"
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7YhCHy2Lf5rd1m1QjDQ5H5A"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-                <iframe width="575" height="275"
-                    src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Z8fDk2XWvn-iGSdglsVkQy"
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PL1U-FkOAme7Z8fDk2XWvn-iGSdglsVkQy"
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
