--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div class="courses" id="expertise">
         <h1>OUR EXPERTISE</h1>
-        <div class="container d-flex justify-content-between align-items-centre paddinglr">
+        <div class="container d-flex justify-content-between align-items-centre expertise-container">
             <div class="cards">
                 <img src="./images/svg/undraw_community_8nwl.svg" alt="9th">
                 <h3>Group Tutions</h3>
@@ -121,11 +121,11 @@
                 <h3>Offline Classes</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
             </div>
-            <div class="cards">
+            <!-- <div class="cards">
                 <img src="./images/svg/undraw_teaching_f1cm.svg" alt="commerce">
                 <h3>1st-12th</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -191,7 +191,7 @@
 
                 <div>
                     <!-- <div class="numbertext">1 / 3</div> -->
-                    <div class="img img-gallery">
+                    <div class="img img-gallery" id="img-slide">
                         <a href="./images/daksh-images/1-img.jpeg" data-lightbox="mygallery" class="img-1">
                             <i class="fas fa-expand"></i>
                         </a>
@@ -360,7 +360,8 @@
             <h1>Why choose us</h1>
             <div class="topics topics-grid">
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle yellow"><i class="fas fa-book" aria-hidden="true"></i></div>
+                    <div class="circle" style="background-color: #eab830"><i class="fas fa-book" aria-hidden="true"></i>
+                    </div>
                     <div class="topic-text">
                         <h3>Communicative Method</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
@@ -368,7 +369,8 @@
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle light-blue"><i class="fas fa-book" aria-hidden="true"></i></div>
+                    <div class="circle" style="background-color: #1ec1d9"><i class="fas fa-book" aria-hidden="true"></i>
+                    </div>
                     <div class="topic-text">
                         <h3>Communicative Method</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
@@ -394,7 +396,8 @@
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle green"><i class="fas fa-book" aria-hidden="true"></i></div>
+                    <div class="circle" style="background-color: #10c45c"><i class="fas fa-book" aria-hidden="true"></i>
+                    </div>
                     <div class="topic-text">
                         <h3>Communicative Method</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
@@ -440,7 +443,7 @@
 
                     <div>
                         <!-- <div class="numbertext">1 / 3</div> -->
-                        <div class="review-slide">
+                        <div class="review-slide" id="tCSlide">
                             <img src="https://lh3.googleusercontent.com/a-/AOh14GgE0VBGQwai2H-U6_oDzfeeRMkYmPEOpthl4KwA=s40-c0x00000000-cc-rp-ba3"
                                 alt="">
                             <p><span>"</span> Institutes encompasses affirmative and amicable teachers and environment
@@ -571,7 +574,7 @@
     <!-- footer section  -->
 
     <div class="footer">
-        <div class="container d-flex justify-content-between">
+        <div class="container footer-container d-flex justify-content-between">
             <div class="cousrses-link">
                 <h1>Our Expertise</h1>
                 <ul>
