created responsive design for more small width devices

--- a/index.html
+++ b/index.html
@@ -633,7 +633,8 @@
                 <h1>Copyright ©
                     <span id="copyright">
                         <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-                    </span> Daksh Study Circle. Made With ❤ By Krishan Kumar
+                    </span> Daksh Study Circle. <br> 
+                    Made With ❤ By Krishan Kumar
                 </h1>
             </div>
         </div>
