fixed some responsive code

--- a/index.html
+++ b/index.html
@@ -633,8 +633,8 @@
                 <h1>Copyright ©
                     <span id="copyright">
                         <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-                    </span> Daksh Study Circle. <br> 
-                    Made With ❤ By Krishan Kumar
+                    </span> Daksh Study Circle. <br>
+                    Made With ❤️ By <a href="https://www.linkedin.com/in/imkrrish/" target="_blank"> Krishan Kumar</a>
                 </h1>
             </div>
         </div>
