testing mail.php

--- a/index.html
+++ b/index.html
@@ -566,19 +566,19 @@
             </div>
 
             <div class="contact-form">
-                <form action="mailto:urdaksh@gmail.com" method="POST" enctype="text/plain" autocomplete="off">
+                <form action="./mail.php" method="POST" autocomplete="off">
                     <h2>Send Us A Message</h2>
                     <div class="inputBox">
-                        <input type="text" name="Full Name" required="required" placeholder="Full Name">
+                        <input type="text" name="full-name" required="required" placeholder="Full Name">
                     </div>
                     <div class="inputBox">
                         <input type="email" name="email" required="required" placeholder="Email">
                     </div>
                     <div class="inputBox">
-                        <input type="text" name="Phone" required="required" placeholder="Phone">
+                        <input type="text" name="phone" required="required" placeholder="Phone">
                     </div>
                     <div class="inputBox">
-                        <textarea name="Message" required="required" placeholder="Type Your Message..."
+                        <textarea name="message" required="required" placeholder="Type Your Message..."
                             rows="5"></textarea>
                     </div>
                     <div class="inputBox">
