--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
 
                     <!-- <div class="numbertext">3 / 3</div> -->
                     <div class="img img-gallery" id="lastClone">
-                        <a href="./images/daksh-images/17-img.jpeg" class="img-17">
+                        <a href="./images/daksh-images/17-img.jpeg" data-lightbox="mygallery" class="img-17">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/18-img.jpg" class="img-18">
+                        <a href="./images/daksh-images/18-img.jpg" data-lightbox="mygallery" class="img-18">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/19-img.jpg" class="img-19">
+                        <a href="./images/daksh-images/19-img.jpg" data-lightbox="mygallery" class="img-19">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/20-img.jpeg" class="img-20">
+                        <a href="./images/daksh-images/20-img.jpeg" data-lightbox="mygallery" class="img-20">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/21-img.jpg" class="img-21">
+                        <a href="./images/daksh-images/21-img.jpg" data-lightbox="mygallery" class="img-21">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/22-img.jpeg" class="img-22">
+                        <a href="./images/daksh-images/22-img.jpeg" data-lightbox="mygallery" class="img-22">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/23-img.jpeg" class="img-23">
+                        <a href="./images/daksh-images/23-img.jpeg" data-lightbox="mygallery" class="img-23">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/24-img.jpeg" class="img-24">
+                        <a href="./images/daksh-images/24-img.jpeg" data-lightbox="mygallery" class="img-24">
                             <i class="fas fa-expand"></i>
                         </a>
                     </div>
@@ -302,29 +302,29 @@
 
                 <div>
                     <!-- <div class="numbertext">1 / 3</div> -->
-                    <div class="img" id="firstClone">
-                        <a href="./images/daksh-images/1-img.jpeg" class="img-1">
+                    <div class="img img-gallery" id="firstClone">
+                        <a href="./images/daksh-images/1-img.jpeg" data-lightbox="mygallery" class="img-1">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/2-img.jpeg" class="img-2">
+                        <a href="./images/daksh-images/2-img.jpeg" data-lightbox="mygallery" class="img-2">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/3-img.jpeg" class="img-3">
+                        <a href="./images/daksh-images/3-img.jpeg" data-lightbox="mygallery" class="img-3">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/4-img.png" class="img-4">
+                        <a href="./images/daksh-images/4-img.png" data-lightbox="mygallery" class="img-4">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/5-img.jpg" class="img-5">
+                        <a href="./images/daksh-images/5-img.jpg" data-lightbox="mygallery" class="img-5">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/6-img.jpg" class="img-6">
+                        <a href="./images/daksh-images/6-img.jpg" data-lightbox="mygallery" class="img-6">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/7-img.jpeg" class="img-7">
+                        <a href="./images/daksh-images/7-img.jpeg" data-lightbox="mygallery" class="img-7">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/8-img.jpg" class="img-8">
+                        <a href="./images/daksh-images/8-img.jpg" data-lightbox="mygallery" class="img-8">
                             <i class="fas fa-expand"></i>
                         </a>
                     </div>
@@ -566,7 +566,7 @@
             </div>
 
             <div class="contact-form">
-                <form action="./mail.php" method="POST" autocomplete="off">
+                <form action="mailto:urdaksh@gmail.com" method="POST" enctype="text/plain" autocomplete="off">
                     <h2>Send Us A Message</h2>
                     <div class="inputBox">
                         <input type="text" name="full-name" required="required" placeholder="Full Name">
