created about-us page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <li><a href="#expertise">Expertise</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#video">Video</a></li>
-                    <li><a href="#about">About Us</a></li>
+                    <li><a href="./about.html">About Us</a></li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
@@ -343,8 +343,11 @@
         </div>
 
     </div>
-
-
+    <div class="banner">
+        <div class="container banner-container">
+            <img class="banner" src="./images/daksh-results-banner-1.jpeg" alt="daksh-results-baneer">
+        </div>
+    </div>
 
     <!-- youtube video section  -->
 
@@ -600,7 +603,7 @@
                     <li><a href="#expertise">Online Classes</a></li>
                     <li><a href="#expertise">Home Tutions</a></li>
                     <li><a href="#expertise">Offline Classes</a></li>
-                    <li><a href="#expertise">1st-12th</a></li>
+                    <!-- <li><a href="#expertise">1st-12th</a></li> -->
                 </ul>
             </div>
             <div class="video-lectures">
@@ -625,7 +628,7 @@
                     <li><a href="#courses">Courses</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#video">Video</a></li>
-                    <li><a href="#about">About Us</a></li>
+                    <li><a href="./about.html">About Us</a></li>
                 </ul>
             </div>
             <div class="social-networks">
@@ -651,8 +654,7 @@
                 <h1>Copyright ©
                     <span id="copyright">
                         <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-                    </span> Daksh Study Circle. <br>
-                    Made With ❤️ By <a href="https://www.linkedin.com/in/imkrrish/" target="_blank"> Krishan Kumar</a>
+                    </span> Daksh Study Circle.
                 </h1>
             </div>
         </div>
