created about-us page

--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
     </div>
 
     <div class="explore-btn text-centre">
-        <a href="#contact"><span>Contact Us</span></a>
+        <a href="./index.html#contact"><span>Contact Us</span></a>
     </div>
 
     <div class="container banner-container">
