--- a/index.html
+++ b/index.html
@@ -179,28 +179,28 @@
 
                     <!-- <div class="numbertext">3 / 3</div> -->
                     <div class="img img-gallery" id="lastClone">
-                        <a href="./images/daksh-images/17-img.jpeg" data-lightbox="mygallery" class="img-17">
+                        <a href="./images/daksh-images/17-img.jpeg" class="img-17">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/18-img.jpg" data-lightbox="mygallery" class="img-18">
+                        <a href="./images/daksh-images/18-img.jpg" class="img-18">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/19-img.jpg" data-lightbox="mygallery" class="img-19">
+                        <a href="./images/daksh-images/19-img.jpg" class="img-19">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/20-img.jpeg" data-lightbox="mygallery" class="img-20">
+                        <a href="./images/daksh-images/20-img.jpeg" class="img-20">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/21-img.jpg" data-lightbox="mygallery" class="img-21">
+                        <a href="./images/daksh-images/21-img.jpg" class="img-21">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/22-img.jpeg" data-lightbox="mygallery" class="img-22">
+                        <a href="./images/daksh-images/22-img.jpeg" class="img-22">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/23-img.jpeg" data-lightbox="mygallery" class="img-23">
+                        <a href="./images/daksh-images/23-img.jpeg" class="img-23">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/24-img.jpeg" data-lightbox="mygallery" class="img-24">
+                        <a href="./images/daksh-images/24-img.jpeg" class="img-24">
                             <i class="fas fa-expand"></i>
                         </a>
                     </div>
@@ -303,28 +303,28 @@
                 <div>
                     <!-- <div class="numbertext">1 / 3</div> -->
                     <div class="img img-gallery" id="firstClone">
-                        <a href="./images/daksh-images/1-img.jpeg" data-lightbox="mygallery" class="img-1">
+                        <a href="./images/daksh-images/1-img.jpeg" class="img-1">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/2-img.jpeg" data-lightbox="mygallery" class="img-2">
+                        <a href="./images/daksh-images/2-img.jpeg" class="img-2">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/3-img.jpeg" data-lightbox="mygallery" class="img-3">
+                        <a href="./images/daksh-images/3-img.jpeg" class="img-3">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/4-img.png" data-lightbox="mygallery" class="img-4">
+                        <a href="./images/daksh-images/4-img.png" class="img-4">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/5-img.jpg" data-lightbox="mygallery" class="img-5">
+                        <a href="./images/daksh-images/5-img.jpg" class="img-5">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/6-img.jpg" data-lightbox="mygallery" class="img-6">
+                        <a href="./images/daksh-images/6-img.jpg" class="img-6">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/7-img.jpeg" data-lightbox="mygallery" class="img-7">
+                        <a href="./images/daksh-images/7-img.jpeg" class="img-7">
                             <i class="fas fa-expand"></i>
                         </a>
-                        <a href="./images/daksh-images/8-img.jpg" data-lightbox="mygallery" class="img-8">
+                        <a href="./images/daksh-images/8-img.jpg" class="img-8">
                             <i class="fas fa-expand"></i>
                         </a>
                     </div>
@@ -625,7 +625,7 @@
                 <h1>Quick links</h1>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#courses">Courses</a></li>
+                    <li><a href="#expertise">Expertise</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#video">Video</a></li>
                     <li><a href="./about.html">About Us</a></li>
