removed all the dummy text

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
                 </div>
                 <ul class="d-flex justify-content-between align-items-centre nav-list">
                     <li><a href="./index.html#home">Home</a></li>
-                    <li><a href="./index.html#expertise">Expertise</a></li>
+                    <li><a href="./index.html#courses">Courses</a></li>
                     <li><a href="./index.html#gallery">Gallery</a></li>
                     <li><a href="./index.html#video">Video</a></li>
                     <li><a href="./about.html" class="aboutactive">About Us</a></li>
@@ -104,17 +104,17 @@
         <h2>ABOUT US</h2>
         <P>
             Incepted in July 2005, since then it has been DAKSH Study Circle's constant
-            endeavour to provide quality education. Till date ,thousands of students have
+            endeavour to provide quality education. Till date, thousands of students have
             studied here and the number is growing. DAKSH has certainly come a long
             way. Daksh Study Circle has grown over the years into a reliable name in
-            coaching and education for secondary school and college students boasting in Saar Bazar, Delhi Cantt.
+            coaching and education for secondary school and college students boasting in Sadar Bazar, Delhi Cantt.
         </P>
         <p>
             DAKSH feels proud when it sees its alumni successful in all walks of life. We
             have successfully mentored students to become not only educated individuals
             but also aware citizens. Hence our motto 'Your Quest for knowledge ends here'
             has proved to be apt for us. Our students can be seen in almost all the
-            prestigious institutions viz, IIT ,NIT, NDA, CDS, IIM's, ICAI, ICWA and other
+            prestigious institutions viz, IIT, NIT, NDA, CDS, IIM's, ICAI, ICWA and other
             Management colleges etc.
         </p>
         <p>
@@ -155,9 +155,9 @@
             <div class="cousrses-link">
                 <h1>Our Expertise</h1>
                 <ul>
-                    <li><a href="./index.html#expertise">Group Tutions</a></li>
+                    <li><a href="./index.html#expertise">Group Tuitions</a></li>
                     <li><a href="./index.html#expertise">Online Classes</a></li>
-                    <li><a href="./index.html#expertise">Home Tutions</a></li>
+                    <li><a href="./index.html#expertise">Home Tuitions</a></li>
                     <li><a href="./index.html#expertise">Offline Classes</a></li>
                     <!-- <li><a href="#expertise">1st-12th</a></li> -->
                 </ul>
