--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <ul class="d-flex justify-content-between align-items-centre nav-list">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#expertise">Expertise</a></li>
+                    <li><a href="#courses">Courses</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#video">Video</a></li>
                     <li><a href="./about.html">About Us</a></li>
@@ -116,28 +116,33 @@
 
     <!-- EXPERTISE -->
 
-    <div class="courses" id="expertise">
-        <h1>OUR EXPERTISE</h1>
+    <div class="courses" id="courses">
+        <!-- <h1>OUR EXPERTISE</h1> -->
+        <h1>OUR COURSES</h1>
         <div class="container d-flex justify-content-between align-items-centre expertise-container">
             <div class="cards">
-                <img src="./images/svg/undraw_community_8nwl.svg" alt="9th">
-                <h3>Group Tutions</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
+                <img src="./images/svg/CBSE-Color.svg" alt="9th">
+                <!-- <h3>Group Tuitions</h3> -->
+                <h3>1st - 12th</h3>
+                <p>Tuitions for all subjects and for all classes for CBSE students.</p>
             </div>
             <div class="cards">
-                <img src="./images/svg/undraw_group_video_el8e.svg" alt="10th">
-                <h3>Online Classes</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
+                <img src="./images/svg/258511.svg" alt="10th">
+                <!-- <h3>Online Classes</h3> -->
+                <h3>RMS/RIMC/Sainik School</h3>
+                <p>Preprations for entrance exams of Defence Schools</p>
             </div>
             <div class="cards">
-                <img src="./images/svg/undraw_Online_learning_re_qw08.svg" alt="arts">
-                <h3>Home Tutions</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
+                <img src="./images/svg/ENG-min.png" alt="arts">
+                <!-- <h3>Home Tuitions</h3> -->
+                <h3>Spoken English</h3>
+                <p>Special Course for spoken english and Personality development</p>
             </div>
             <div class="cards">
-                <img src="./images/svg/undraw_studying_s3l7.svg" alt="science">
-                <h3>Offline Classes</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, nostrum?</p>
+                <img src="./images/svg/kindpng_993225.png" alt="science">
+                <!-- <h3>Offline Classes</h3> -->
+                <h3>PCMB Accounts Eco Business</h3>
+                <p>Special Classes for all Subjects of all streams</p>
             </div>
             <!-- <div class="cards">
                 <img src="./images/svg/undraw_teaching_f1cm.svg" alt="commerce">
@@ -154,10 +159,13 @@
         <div class="message">
             <h3>Director - Anil Kumar</h3>
             <h1>It Is Never To Late To Learn</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit nemo corporis blanditiis consequuntur
-                consectetur! Nemo cupiditate ipsam deleniti officiis nisi, voluptatibus dolores consequuntur, commodi
-                iusto voluptate labore inventore adipisci neque officia tempora id eaque suscipit qui corporis est quo.
-                Deserunt officia aperiam maiores nisi inventore architecto laborum nulla suscipit alias.
+            <p>
+                At Daksh Study Circle, we are committed to providing you the best in the arena whether it is the
+                classroom atmosphere, the quality of lectures, the study material, the test series or the guidance and
+                information, Daksh has consistently been the 360 degree benchmark setter in the past decade and with
+                our innovative approaches and consistent efforts, we will continue to define the future of quality
+                education.
+                <br>
             </p>
             <div class="explore-btn explore-btn-message text-centre">
                 <a href="#contact"><span> Contact Us</span></a>
@@ -381,57 +389,59 @@
             <h1>Why choose us</h1>
             <div class="topics topics-grid">
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle" style="background-color: #eab830"><i class="fas fa-book" aria-hidden="true"></i>
+                    <div class="circle" style="background-color: #eab830"><i class="fas fa-users"
+                            aria-hidden="true"></i>
                     </div>
                     <div class="topic-text">
-                        <h3>Communicative Method</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
-                            aperiam quo.</p>
+                        <h3>Teacher-Student Ratio</h3>
+                        <p>We have Optimum Teacher-Student Ratio and it helps to gain more attention from the students
+                            and
+                            enables personalized attention to each student</p>
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle" style="background-color: #1ec1d9"><i class="fas fa-book" aria-hidden="true"></i>
+                    <div class="circle" style="background-color: #1ec1d9"><i class="fas fa-user-check"
+                            aria-hidden="true"></i>
                     </div>
                     <div class="topic-text">
-                        <h3>Communicative Method</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
-                            aperiam quo.</p>
+                        <h3>Early completion of syllabus</h3>
+                        <p>We complete the syllabus early for more revision time <br></p>
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle" style="background-color: #307ad5;"><i class="fas fa-book"
+                    <div class="circle" style="background-color: #307ad5;"><i class="fas fa-book-reader"
                             aria-hidden="true"></i></div>
                     <div class="topic-text">
-                        <h3>Communicative Method</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
-                            aperiam quo.</p>
+                        <h3>Online Classes</h3>
+                        <p>When needed we arrange online classes so that students don't miss any important topics
+                            <br><br><br></p>
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle" style="background-color: tomato;"><i class="fas fa-book" aria-hidden="true"></i>
+                    <div class="circle" style="background-color: tomato;"><i class="fas fa-award"
+                            aria-hidden="true"></i>
                     </div>
                     <div class="topic-text">
-                        <h3>Communicative Method</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
-                            aperiam quo.</p>
+                        <h3>Best Result</h3>
+                        <p>We have been consistent performer with proven track record <br></p>
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle" style="background-color: #10c45c"><i class="fas fa-book" aria-hidden="true"></i>
+                    <div class="circle" style="background-color: #10c45c"><i class="fas fa-chart-line"
+                            aria-hidden="true"></i>
                     </div>
                     <div class="topic-text">
-                        <h3>Communicative Method</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
-                            aperiam quo.</p>
+                        <h3>Experienced Faculty</h3>
+                        <p>Expert result oriented faculty dedicated to bringing the best out of every student<br><br>
+                        </p>
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
-                    <div class="circle" style="background-color: #d94da6;"><i class="fas fa-book"
+                    <div class="circle" style="background-color: #d94da6;"><i class="fas fa-user-friends"
                             aria-hidden="true"></i></div>
                     <div class="topic-text">
-                        <h3>Communicative Method</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit minus natus quasi earum modi,
-                            aperiam quo.</p>
+                        <h3>Personal Attention</h3>
+                        <p>Personal attention to the Student as not every individual has the same aptitude <br></p>
                     </div>
                 </div>
             </div>
@@ -532,18 +542,15 @@
             tabindex="0"></iframe>
         <div class="container contact-container">
             <h1>Contact Us</h1>
-            <p class="contact-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla itaque
-                adipisci
-                illum. Magni dicta
-                voluptatem dolor temporibus enim itaque, placeat accusamus consequuntur, harum laborum iure
-            </p>
+            <p class="contact-content">Need to get in touch with us? Either fill out the form with your inquiry or find
+                our email you'd like to contact below.</p>
             <div class="info container">
                 <div class="loaction">
                     <div class="circle"><a class="icon" href="https://goo.gl/maps/4FfyLoDHbKVuLQB8A" target="_blank"><i
                                 class="fas fa-map-marker-alt"></i></a></div>
                     <div class="contact-text">
                         <p><span><strong>Daksh Study Circle</strong></span><br>
-                            Shop No.H-2,Kalpatru Complex,Delhi Cantt, Sadar Bazaar, Delhi Cantonment, New Delhi,
+                            Shop No.H-2, Kalpatru Complex, Delhi Cantt, Sadar Bazaar, Delhi Cantonment, New Delhi,
                             Delhi
                             110010
                         </p>
@@ -599,9 +606,9 @@
             <div class="cousrses-link">
                 <h1>Our Expertise</h1>
                 <ul>
-                    <li><a href="#expertise">Group Tutions</a></li>
+                    <li><a href="#expertise">Group Tuitions</a></li>
                     <li><a href="#expertise">Online Classes</a></li>
-                    <li><a href="#expertise">Home Tutions</a></li>
+                    <li><a href="#expertise">Home Tuitions</a></li>
                     <li><a href="#expertise">Offline Classes</a></li>
                     <!-- <li><a href="#expertise">1st-12th</a></li> -->
                 </ul>
