--- a/index.html
+++ b/index.html
@@ -395,8 +395,7 @@
                     <div class="topic-text">
                         <h3>Teacher-Student Ratio</h3>
                         <p>We have Optimum Teacher-Student Ratio and it helps to gain more attention from the students
-                            and
-                            enables personalized attention to each student</p>
+                            and enables personalized attention to each student</p>
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
@@ -414,7 +413,8 @@
                     <div class="topic-text">
                         <h3>Online Classes</h3>
                         <p>When needed we arrange online classes so that students don't miss any important topics
-                            <br><br><br></p>
+                            <br><br><br>
+                        </p>
                     </div>
                 </div>
                 <div class="topic d-flex justify-content-between">
